tests/pass/import.yap
//This test checks file imports (at least for now as modules are not a thing yet)

import "imports/foo_bar.yap"
import "imports/foo.yap"
import "imports/bar.yap"

//import math

fn main(){
    //foo();
}