tests/fail/missing_file_import/test.yap
import "./this_file_does_not_exist.yap"

fn main() {}
